fix align issue

--- a/src/components/ResumeOne.css
+++ b/src/components/ResumeOne.css
@@ -117,9 +117,10 @@ textarea {
 }
 
 .city {
-    width: 200px !important;
+    width: 170px !important;
     text-align: right;
     float: right;
+    margin-top: 10px;
 }
 
 .college {
